- Tokens may now be set on UITokenMenu - Moved all local rules to boss-reference - Updated the patterns where the ui object is set on the select element for search and token menu to be consistent across all components - Assignees are now set on load - Fix: Token values are now vertically aligned in pill

--- a/public/boss/styles.css
+++ b/public/boss/styles.css
@@ -2396,13 +2396,14 @@ div.ui-toolbox button:hover {
   background: #000;
   color: #fff;
   border-radius: 10px;
-  padding: 2px 8px;
+  padding: 4px 8px;
   font-family: "ChicagoFLF";
   font-size: 12px;
   white-space: nowrap;
 }
 .ui-token-label {
   line-height: 1;
+  padding-bottom: 2px;
 }
 .ui-token-remove {
   background: none;
